Fix: z-index layers - list above map

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,15 @@ header {
 .leaflet-container {
   width: 100%;
   height: 100%;
+  z-index: 1 !important;
+}
+
+.leaflet-pane {
+  z-index: 2 !important;
+}
+
+.leaflet-control {
+  z-index: 3 !important;
 }
 
 @media (max-width: 768px) {
